Name:          dater
Version:       0.0.1
License:       MIT
License-file:  LICENSE
Category:      Writing
Synopsis:      Express and operate on dates & times in varied formats
Description:   Lets you declare your own date & time formats
Author:        Nate Soares
Maintainer:    nate@natesoares.com
Build-Type:    Simple
Cabal-Version: >=1.9.2

Test-Suite test-dater
  type: exitcode-stdio-1.0
  main-is: Test/Dater.hs
  build-depends:
    Cabal >= 1.9.2,
    HUnit >= 1.2,
    QuickCheck >= 2.4,
    test-framework >= 0.6,
    test-framework-quickcheck2 >= 0.2,
    test-framework-hunit >= 0.2.7,
    base >= 4 && < 5
  Hs-Source-Dirs: src

Library
  Build-Depends:
    parsec >= 3.1 && < 4,
    containers >= 0.4,
    template-haskell >= 2 && < 3,
    base >= 4 && < 5
  Ghc-Options:   -O2 -Wall
  Hs-Source-Dirs:  src
  Exposed-Modules:
    Data.Coded,
    Data.DateTime.ConstPart,
    Data.DateTime.DateTime,
    Data.DateTime.Gregorian,
    Data.DateTime.VarPart,
    Data.Modable,
    Data.Naturals,
    Data.Normalize,
    Data.Pair,
    Data.Ranged,
    Data.Zeroed,
    Text.Format,
    Text.Parse
